2009-07-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/configure.in: Don't automatically include
	/lib/modules/* headers anymore.  We have sane headers in the standard
	place now.

2009-06-16  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/dl-procinfo.c (_dl_s390_cap_flags): "hpage",
	"etf3enh" and "highgprs" added.
	(_dl_s390_platforms): "z10" added.
	* sysdeps/s390/dl-procinfo.h (_DL_HWCAP_COUNT, _DL_PLATFORMS_COUNT):
	Increased for the new entries.
	(HWCAP enum): HWCAP_S390_HPAGE, HWCAP_S390_ETF3EH and
	HWCAP_S390_HIGH_GPRS added.

	* sysdeps/s390/s390-64/Makefile: Adjusted to build the new modules.
	* sysdeps/s390/s390-64/iso-8859-1_cp037_z900.c: New file.
	* sysdeps/s390/s390-64/utf16-utf32-z9.c: New file.
	* sysdeps/s390/s390-64/utf8-utf16-z9.c: New file.
	* sysdeps/s390/s390-64/utf8-utf32-z9.c: New file.

2009-07-23  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/cacheinfo.c [USE_MULTIARCH]: Rearrange code to
	avoid additional cpuid instructions.  Most of the information is
	stored somewhere.

	* sysdeps/unix/sysv/linux/i386/sysconf.c (intel_02_known): Add more
	cache descriptors.
	* sysdeps/x86_64/cacheinfo.c (intel_02_known): Likewise.

	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features): Reset
	SSSE3 bit for Atoms.
	* sysdeps/x86_64/multiarch/strcpy.S: New need to perform Atom test
	here anymore.

	* posix/tst-rfc3484.c (do_test): Initialize entire sockaddr_in
	structure before copying it to avoid warning.
	* posix/tst-rfc3484-2.c (do_test): Likewise.
	* posix/tst-rfc3484-3.c (do_test): Likewise.

	[BZ #10416]
	* include/unistd.h: Make header file suitable for C++ test cases.
	Patch by Duncan Simpson <dps@simpson.demon.co.uk>.

	* sysdeps/unix/sysv/linux/i386/makecontext.S: Ensure we preserve the
	stack alignment in the exit code.

	* elf/dl-lookup.c (dl_lookup_x): The hashval for unique symbol can
	potentially be zero.

	* elf/tst-unique1.c: Extend test to check for unloading DSO with